cabal-version:      3.0
name:               tidepool-tidying
version:            0.1.0.0
synopsis:           Prosthetic executive function agent for tackling overwhelming spaces
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -haddock -fwrite-interface

library
    import:           warnings
    exposed-modules:
        Tidying
        Tidying.Types
        Tidying.Agent
        Tidying.State
        Tidying.Action
        Tidying.Decide
        Tidying.Act
        Tidying.Context
        Tidying.Output
        Tidying.Templates
        Tidying.Events
        Tidying.Loop
        Tidying.Tools
        Tidying.GUI.App
        Tidying.GUI.Runner
        Tidying.GUI.Theme
        Tidying.GUI.Widgets.Chat
        Tidying.GUI.Widgets.Input
        Tidying.GUI.Widgets.Question
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        tidepool-platform,
        effectful-core >= 2.3 && < 3,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        vector >= 0.13 && < 1,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        threepenny-gui >= 0.9 && < 1,
        stm >= 2.5 && < 3,
        time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell

executable tidepool-tidy-gui
    import:           warnings
    main-is:          MainTidyGUI.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        threepenny-gui >= 0.9 && < 1,
        tidepool-core,
        tidepool-platform,
        tidepool-tidying
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

executable test-tidying
    import:           warnings
    main-is:          TestTidying.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        tidepool-core,
        tidepool-tidying
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
