cabal-version:      3.0
name:               tidepool-wasm
version:            0.1.0.0
synopsis:           WASM target for tidepool graphs - FFI exports and wire types
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns

library
    import:           warnings
    exposed-modules:
        Tidepool.Wasm.Effect
        Tidepool.Wasm.ExampleGraph
        Tidepool.Wasm.TestGraph
        Tidepool.Wasm.LlmTestGraph
        Tidepool.Wasm.WireTypes
        Tidepool.Wasm.Ffi
        Tidepool.Wasm.Runner
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        freer-simple >= 1.2 && < 2,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3

    -- WASM-specific configuration
    if os(wasi)
        build-depends:
            ghc-experimental
        ghc-options:
            -no-hs-main
            -optl-mexec-model=reactor
            -optl-Wl,--export=hs_init
            -- TestGraph exports
            -optl-Wl,--export=initialize
            -optl-Wl,--export=step
            -optl-Wl,--export=getGraphInfo
            -optl-Wl,--export=getGraphState
            -- ExampleGraph exports
            -optl-Wl,--export=initializeExample
            -optl-Wl,--export=stepExample
            -optl-Wl,--export=getExampleGraphInfo
            -optl-Wl,--export=getExampleGraphState

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators

test-suite tidepool-wasm-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        WireTypesSpec
        TestGraphSpec
        ExampleGraphSpec
        LlmTestGraphSpec
        ProtocolConformanceSpec
        ProtocolPropertySpec
        RunnerSpec
        FfiSpec
        E2ESpec
        ExecutorSpec
    build-depends:
        base >= 4.17 && < 5,
        hspec >= 2.10 && < 3,
        QuickCheck >= 2.14 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        scientific >= 0.3 && < 1,
        text >= 2.0 && < 3,
        vector >= 0.12 && < 1,
        tidepool-wasm,
        tidepool-core
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

-- | Generates golden JSON samples for cross-language protocol verification.
-- Run with: cabal run generate-golden-samples
-- Output goes to deploy/test/golden-samples.json
executable generate-golden-samples
    import:           warnings
    main-is:          GenerateGoldenSamples.hs
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.1 && < 3,
        aeson-pretty >= 0.8 && < 1,
        bytestring >= 0.11 && < 1,
        text >= 2.0 && < 3,
        tidepool-wasm
    hs-source-dirs:   golden
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
