cabal-version:      3.0
name:               tidepool-wasm
version:            0.1.0.0
synopsis:           WASM target for tidepool graphs - FFI exports and wire types
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns

library
    import:           warnings
    exposed-modules:
        Tidepool.Wasm.Prelude
        Tidepool.Wasm.Effect
        Tidepool.Wasm.ExampleGraph
        Tidepool.Wasm.Habitica
        Tidepool.Wasm.TestGraph
        Tidepool.Wasm.LlmTestGraph
        Tidepool.Wasm.WireTypes
        Tidepool.Wasm.Ffi.Types
        Tidepool.Wasm.Runner
        Tidepool.Wasm.Roundtrip
        -- Unified Registry
        Tidepool.Wasm.Registry
        Tidepool.Wasm.Registry.Types
        Tidepool.Wasm.Registry.Default
        Tidepool.Wasm.Registry.TestGraph
        Tidepool.Wasm.Registry.ExampleGraph
        -- Unified FFI
        Tidepool.Wasm.Ffi.Unified
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        tidepool-generated-ts,
        freer-simple >= 1.2 && < 2,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        scientific >= 0.3 && < 1,
        template-haskell,
        text >= 2.0 && < 3,
        vector >= 0.12 && < 1

    -- WASM-specific build dependency
    if os(wasi)
        build-depends:
            ghc-experimental
        ghc-options:
            -no-hs-main
            -optl-mexec-model=reactor
            -optl-Wl,--export=hs_init
            -- NOTE: initRegistry NOT exported from library - only from reactor executable
            -- Unified FFI exports (4 total, never changes when adding graphs)
            -optl-Wl,--export=initialize
            -optl-Wl,--export=step
            -optl-Wl,--export=getGraphInfo
            -optl-Wl,--export=getGraphState
            -- Roundtrip exports (for property testing)
            -optl-Wl,--export=roundtripSerializableEffect
            -optl-Wl,--export=roundtripEffectResult
            -optl-Wl,--export=roundtripExecutionPhase
            -optl-Wl,--export=roundtripGraphState
            -optl-Wl,--export=roundtripStepOutput
            -- Graph info roundtrip exports
            -optl-Wl,--export=roundtripTypeInfoWire
            -optl-Wl,--export=roundtripGotoTargetWire
            -optl-Wl,--export=roundtripNodeInfoWire
            -optl-Wl,--export=roundtripEdgeInfoWire
            -optl-Wl,--export=roundtripGraphInfoWire

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators

test-suite tidepool-wasm-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        WireTypesSpec
        TestGraphSpec
        ExampleGraphSpec
        LlmTestGraphSpec
        ProtocolConformanceSpec
        ProtocolPropertySpec
        RunnerSpec
        FfiSpec
        E2ESpec
        ExecutorSpec
        CodegenSyncSpec
        RoundtripSpec
        RegistrySpec
    build-depends:
        base >= 4.17 && < 5,
        hspec >= 2.10 && < 3,
        QuickCheck >= 2.14 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        containers >= 0.6 && < 1,
        scientific >= 0.3 && < 1,
        text >= 2.0 && < 3,
        vector >= 0.12 && < 1,
        tidepool-wasm,
        tidepool-core,
        tidepool-generated-ts
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

-- | WASM reactor executable for Cloudflare Workers.
-- This produces a self-contained WASM module with all FFI exports.
-- The library produces a dynamically-linked .so which won't work standalone.
executable tidepool-reactor
    import:           warnings
    main-is:          Reactor.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-wasm
    hs-source-dirs:   reactor
    default-language: GHC2021
    if os(wasi)
        build-depends:
            ghc-experimental
        ghc-options:
            -no-hs-main
            -optl-mexec-model=reactor
            -optl-Wl,--export=hs_init
            -- Registry initialization (call once before any FFI calls)
            -optl-Wl,--export=initRegistry
            -- Unified FFI exports (4 total, never changes when adding graphs)
            -optl-Wl,--export=initialize
            -optl-Wl,--export=step
            -optl-Wl,--export=getGraphInfo
            -optl-Wl,--export=getGraphState
            -- Roundtrip exports (for property testing)
            -optl-Wl,--export=roundtripSerializableEffect
            -optl-Wl,--export=roundtripEffectResult
            -optl-Wl,--export=roundtripExecutionPhase
            -optl-Wl,--export=roundtripGraphState
            -optl-Wl,--export=roundtripStepOutput
            -- Graph info roundtrip exports
            -optl-Wl,--export=roundtripTypeInfoWire
            -optl-Wl,--export=roundtripGotoTargetWire
            -optl-Wl,--export=roundtripNodeInfoWire
            -optl-Wl,--export=roundtripEdgeInfoWire
            -optl-Wl,--export=roundtripGraphInfoWire

-- | Generates the TypeScript npm package with type-safe bindings.
-- Run with: cabal run generate-ts-package -- ./output
-- Output is a complete npm package ready for use by deploy/
executable generate-ts-package
    import:           warnings
    main-is:          GeneratePackage.hs
    build-depends:
        base >= 4.17 && < 5,
        directory,
        filepath,
        text >= 2.0 && < 3,
        tidepool-generated-ts,
        tidepool-wasm
    hs-source-dirs:   codegen
    default-language: GHC2021
    default-extensions:
        OverloadedStrings

-- | Generates golden JSON samples for cross-language protocol verification.
-- Run with: cabal run generate-golden-samples
-- Output goes to deploy/test/golden-samples.json
executable generate-golden-samples
    import:           warnings
    main-is:          GenerateGoldenSamples.hs
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.1 && < 3,
        aeson-pretty >= 0.8 && < 1,
        bytestring >= 0.11 && < 1,
        text >= 2.0 && < 3,
        tidepool-wasm
    hs-source-dirs:   golden
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
