cabal-version:      3.0
name:               types-first-dev
version:            0.1.0.0
synopsis:           Types-first Haskell development workflow graph
description:
    Multi-stage graph implementing a types-first development workflow:
    .
    1. Types agent writes type signatures
    2. Fork to parallel agents in separate worktrees
    3. Tests agent writes QuickCheck properties
    4. Impl agent writes implementation
    5. Merge and run test loop
    .
    This validates the full graph execution pipeline with parallel agents,
    git worktrees, and deterministic test loops.
license:            MIT
author:             Inanna
build-type:         Simple

library
    exposed-modules:
        TypesFirstDev.Types
        TypesFirstDev.Types.Hybrid
        TypesFirstDev.Types.V2
        TypesFirstDev.Schema.Hybrid
        TypesFirstDev.Context.Hybrid
        TypesFirstDev.Templates.Hybrid
        TypesFirstDev.Templates.V2
        TypesFirstDev.Graph.Hybrid
        TypesFirstDev.Graph.V2
        TypesFirstDev.V3.Types
        TypesFirstDev.V3.Types.Core
        TypesFirstDev.V3.Types.Shared
        TypesFirstDev.V3.Types.Payloads
        TypesFirstDev.V3.Types.Memory
        TypesFirstDev.V3.Types.Nodes
        TypesFirstDev.V3.Context
        TypesFirstDev.V3.Templates
        TypesFirstDev.V3.Graph
        TypesFirstDev.Handlers.V2.Effects
        TypesFirstDev.Handlers.V2.Genesis
        TypesFirstDev.Effect.Build
        TypesFirstDev.Handlers.Hybrid.Effects
        TypesFirstDev.Handlers.Hybrid.Stubs
        TypesFirstDev.Handlers.Hybrid.Genesis
        TypesFirstDev.Handlers.Hybrid.Merge
        TypesFirstDev.Handlers.Hybrid.Parallel
        TypesFirstDev.Handlers.Hybrid.Validation
        TypesFirstDev.Handlers.Hybrid.Adversary
        TypesFirstDev.Handlers.Hybrid.Witness
        TypesFirstDev.Schema
        TypesFirstDev.Context
        TypesFirstDev.Templates
        TypesFirstDev.Graph
        TypesFirstDev.Handlers
        TypesFirstDev.MechanicalChecks
        TypesFirstDev.RubricPolicy
        TypesFirstDev.Stats
        TypesFirstDev.DevRuns
        TypesFirstDev.Baseline
        TypesFirstDev.Evaluation
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        process >= 1.6 && < 2,
        mtl >= 2.2 && < 3,
        ginger >= 0.10 && < 1,
        parsec >= 3.1 && < 4,
        time >= 1.12 && < 2,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor,
        async >= 2.2 && < 3,
        yaml >= 0.11 && < 1
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TemplateHaskell
        TypeFamilies
        TypeOperators
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -haddock

executable types-first-dev
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        directory >= 1.3 && < 2,
        process >= 1.6 && < 2,
        types-first-dev,
        tidepool-core,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

-- | Actor runtime runner for the full 20-node hybrid TDD graph.
-- This is the primary executable for running types-first-dev.
executable types-first-dev-runner
    main-is:          Runner.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TypeFamilies
        TypeOperators
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        types-first-dev,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        yaml >= 0.11 && < 1
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
        -Wno-name-shadowing

test-suite types-first-dev-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        types-first-dev,
        tidepool-core,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        hspec >= 2.10 && < 3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
