cabal-version:      3.0
name:               types-first-dev
version:            0.1.0.0
synopsis:           V3 TDD workflow graph with parallel spawn and tree coordination
description:
    8-node TDD graph implementing types-first development:
    .
    1. Scaffold: Analyze spec, create interface + tests + plan
    2. Fork: Spawn TDD WriteTests and ImplBarrier in parallel
    3. TDDWriteTests: Write failing tests for all criteria
    4. ImplBarrier: Wait for tests + children
    5. Impl: Make tests pass (self-loop retry)
    6. TDDReviewImpl: Review impl, route to Merger or MoreTests
    7. Merger: File MR to parent
    8. Rebaser: Adapt to sibling changes
    .
    Features: Subgraph for child spawning, Fork/Barrier for parallel TDD,
    Memory effect for conversation context, Goto for control flow.
license:            MIT
author:             Inanna
build-type:         Simple

library
    exposed-modules:
        -- Types
        TypesFirstDev.Types
        TypesFirstDev.Types.Core
        TypesFirstDev.Types.Shared
        TypesFirstDev.Types.Payloads
        TypesFirstDev.Types.Memory
        TypesFirstDev.Types.Nodes
        -- Core modules
        TypesFirstDev.Context
        TypesFirstDev.Templates
        TypesFirstDev.Graph
        TypesFirstDev.Handlers
        -- Handler modules (one per node)
        TypesFirstDev.Handlers.Scaffold
        TypesFirstDev.Handlers.TDDWriteTests
        TypesFirstDev.Handlers.ImplBarrier
        TypesFirstDev.Handlers.ImplReviewMerge
        TypesFirstDev.Handlers.Rebaser
        -- V3 runtime
        TypesFirstDev.V3.Interpreters
        TypesFirstDev.Schema
        -- Policy and evaluation
        TypesFirstDev.Policy
        TypesFirstDev.Evaluation
        TypesFirstDev.Decomposition
        -- Effects
        TypesFirstDev.Effect.Build
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        process >= 1.6 && < 2,
        mtl >= 2.2 && < 3,
        ginger >= 0.10 && < 1,
        parsec >= 3.1 && < 4,
        time >= 1.12 && < 2,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor,
        async >= 2.2 && < 3,
        stm >= 2.5 && < 3,
        yaml >= 0.11 && < 1
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TemplateHaskell
        TypeFamilies
        TypeOperators
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -haddock

executable types-first-dev
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        directory >= 1.3 && < 2,
        process >= 1.6 && < 2,
        types-first-dev,
        tidepool-core,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

-- | Actor runtime runner for the V3 TDD graph.
executable types-first-dev-runner
    main-is:          Runner.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TypeFamilies
        TypeOperators
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        types-first-dev,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        yaml >= 0.11 && < 1
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
        -Wno-name-shadowing

test-suite types-first-dev-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        types-first-dev,
        tidepool-core,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        hspec >= 2.10 && < 3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
