cabal-version:      3.0
name:               types-first-dev
version:            0.1.0.0
synopsis:           Single-node Work graph with recursive tree decomposition
description:
    Single recursive Work node that handles everything:
    .
    * Continue: self-loop for local work
    * Spawn: spawn children via Subgraph effect
    * AwaitNext: block on child completion
    * Complete: exit with commit hash
    .
    Features: Subgraph effect for parallel child spawning and collection,
    Memory effect for session continuation, stateless mantle integration.
license:            MIT
author:             Inanna
build-type:         Simple

library
    exposed-modules:
        -- Types
        TypesFirstDev.Types
        TypesFirstDev.Types.Core
        TypesFirstDev.Types.JsonOpts
        TypesFirstDev.Types.Work
        -- Work graph (single recursive node)
        TypesFirstDev.WorkGraph
        TypesFirstDev.WorkContext
        TypesFirstDev.WorkHandlers
        TypesFirstDev.WorkExecutor
        TypesFirstDev.WorkTemplates
        TypesFirstDev.WorkInterpreters
        TypesFirstDev.WorkHandlersAssembled
        -- Effects
        TypesFirstDev.Effect.Build
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        process >= 1.6 && < 2,
        mtl >= 2.2 && < 3,
        ginger >= 0.10 && < 1,
        parsec >= 3.1 && < 4,
        time >= 1.12 && < 2,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor,
        async >= 2.2 && < 3,
        stm >= 2.5 && < 3,
        yaml >= 0.11 && < 1
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TemplateHaskell
        TypeFamilies
        TypeOperators
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -haddock

executable types-first-dev
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        directory >= 1.3 && < 2,
        process >= 1.6 && < 2,
        types-first-dev,
        tidepool-core,
        tidepool-session-executor,
        tidepool-worktree-executor,
        tidepool-cabal-executor
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

-- | Actor runtime runner for the V3 TDD graph.
executable types-first-dev-runner
    main-is:          Runner.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TypeFamilies
        TypeOperators
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        stm >= 2.5 && < 3,
        types-first-dev,
        tidepool-core,
        tidepool-actor,
        tidepool-session-executor,
        tidepool-worktree-executor,
        yaml >= 0.11 && < 1
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
        -Wno-name-shadowing

test-suite types-first-dev-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        types-first-dev,
        tidepool-core,
        tidepool-actor,
        freer-simple >= 1.2 && < 2,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        hspec >= 2.10 && < 3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
